--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <a href="#aboutme">About Me</a>
             <a href="#work">Work</a>
-            <a>Contact Me</a>
+            <a href="#contactme">Contact Me</a>
         </nav>
     </header>
     <main>
@@ -39,18 +39,39 @@
             <rightcontent>
                 <showcase>
                         <a class="imageanchor" href="https://mitchh10.github.io/CSS-Snippet-Cheat-Sheet/" target="_blank"></a>
-                        <a class="titleanchor"href="https://mitchh10.github.io/CSS-Snippet-Cheat-Sheet/" target="_blank"><h3>CSS Snippet<br>Cheatsheet</h3></a>
+                        <a class="titleanchor" href="https://mitchh10.github.io/CSS-Snippet-Cheat-Sheet/" target="_blank"><h3>CSS Snippet<br>Cheatsheet</h3></a>
                 </showcase>
                 <otherwork>
-
+                        <workitem id="workitem1">
+                            <a class="imageanchor" href="https://mitchh10.github.io/Horiseon-Refactor/" target="_blank"></a>
+                            <a class="titleanchor" href="https://mitchh10.github.io/Horiseon-Refactor/" target="_blank"><h3>Horiseon<br>Refactor</h3></a>
+                        </workitem>
+                        <workitem id="workitemcomingsoon">
+                            <a class="imageanchor" href="https://www.google.com/" target="_blank"></a>
+                            <a class="titleanchor" href="https://www.google.com/" target="_blank"><h3>Coming<br>Soon</h3></a>
+                        </workitem>
+                        <workitem id="workitemcomingsoon">
+                            <a class="imageanchor" href="https://www.google.com/" target="_blank"></a>
+                            <a class="titleanchor" href="https://www.google.com/" target="_blank"><h3>Coming<br>Soon</h3></a>
+                        </workitem>
+                        <workitem id="workitemcomingsoon">
+                            <a class="imageanchor" href="https://www.google.com/" target="_blank"></a>
+                            <a class="titleanchor" href="https://www.google.com/" target="_blank"><h3>Coming<br>Soon</h3></a>
+                        </workitem>
                 </otherwork>
             </rightcontent>
         </work>
+        <contactme id="contactme" class="contactme content">
+            <lefttitle>
+                <h2>Contact Me</h2>
+            </lefttitle>
+            <rightcontent>
+                <h3>210-238-8488</h3>
+                <h3>mjh10@live.com</h3>
+                <a href="https://github.com/MitchH10" target="_blank"><h3>Github</h3></a>
+            </rightcontent>
+        </contactme>
     </main>
-    <!--Webpage footer-->
-    <footer>
-       
-    </footer>
 </body>
 
 </html>
