final tweaks: added README, added shadows to the work items, added comments

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 
 <body>
-    <!--Header with links-->
+    <!--Header-->
     <header>
+        <!--Personal pic and name-->
         <div>
             <img src="./assets/images/Proile pic square.jpg">
             <h1>Mitchell Harper</h1>
         </div>
+        <!--Nav bar-->
         <nav>
             <a href="#aboutme">About Me</a>
             <a href="#work">Work</a>
@@ -22,6 +24,7 @@
         </nav>
     </header>
     <main>
+        <!--About me section, split into two columns-->
         <aboutme id="aboutme" class="aboutme content">
             <lefttitle>
                 <h2>About Me</h2>
@@ -32,15 +35,18 @@
                 <p>I'm a very quick learner and have a strong drive to learn and improve. I have a naturally high curiousity about how the world works and web development is an extention of that journey.</p>
             </rightcontent>
         </aboutme>
+        <!--Work section, split into two columns-->
         <work id="work" class="work content">
             <lefttitle>
                 <h2>Work</h2>
             </lefttitle>
             <rightcontent>
+                <!--Handling main showcase work item-->
                 <showcase>
                         <a class="imageanchor" href="https://mitchh10.github.io/CSS-Snippet-Cheat-Sheet/" target="_blank"></a>
                         <a class="titleanchor" href="https://mitchh10.github.io/CSS-Snippet-Cheat-Sheet/" target="_blank"><h3>CSS Snippet<br>Cheatsheet</h3></a>
                 </showcase>
+                <!--Handling the other work items-->
                 <otherwork>
                         <workitem id="workitem1">
                             <a class="imageanchor" href="https://mitchh10.github.io/Horiseon-Refactor/" target="_blank"></a>
@@ -61,6 +67,7 @@
                 </otherwork>
             </rightcontent>
         </work>
+        <!--Contact me section, split into two columns-->
         <contactme id="contactme" class="contactme content">
             <lefttitle>
                 <h2>Contact Me</h2>
