fixed typo in about me

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <rightcontent>
                 <p>Thank you for visiting my portfolio. My name is Mitch and I'm a web developer.</p>
                 <p>I have about a decade of experience in computer programming. I know many languages: JavaScript, C#, C++, Java, Python, HTML, CSS, SQL, Visual Basic, LUA, and G. I have experience in web development, robotics programming, and android app development.</p>
-                <p>I'm a very quick learner and have a strong drive to learn and improve. I have a naturally high curiousity about how the world works and web development is an extention of that journey.</p>
+                <p>I'm a very quick learner and have a strong drive to learn and improve. I have a naturally high curiousity about how the world works and web development is an extension of that journey.</p>
             </rightcontent>
         </aboutme>
         <!--Work section, split into two columns-->
