added to showcase: NPS locator, Password Generator, Work Day Scheduler

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--Nav bar-->
         <nav>
             <a href="#aboutme">About Me</a>
-            <a href="#work">Work</a>
+            <a href="#work">Showcase</a>
             <a href="#contactme">Contact Me</a>
         </nav>
     </header>
@@ -38,31 +38,31 @@
         <!--Work section, split into two columns-->
         <work id="work" class="work content">
             <lefttitle>
-                <h2>Work</h2>
+                <h2>Showcase</h2>
             </lefttitle>
             <rightcontent>
                 <!--Handling main showcase work item-->
                 <showcase>
-                        <a class="imageanchor" href="https://mitchh10.github.io/CSS-Snippet-Cheat-Sheet/" target="_blank"></a>
-                        <a class="titleanchor" href="https://mitchh10.github.io/CSS-Snippet-Cheat-Sheet/" target="_blank"><h3>CSS Snippet<br>Cheatsheet</h3></a>
+                        <a class="imageanchor" href="https://rdalby2002.github.io/national-park-locator/" target="_blank"></a>
+                        <a class="titleanchor" href="https://rdalby2002.github.io/national-park-locator/" target="_blank"><h3>National Park<br>Locator</h3></a>
                 </showcase>
                 <!--Handling the other work items-->
                 <otherwork>
                         <workitem id="workitem1">
+                            <a class="imageanchor" href="https://mitchh10.github.io/CSS-Snippet-Cheat-Sheet/" target="_blank"></a>
+                            <a class="titleanchor" href="https://mitchh10.github.io/CSS-Snippet-Cheat-Sheet/" target="_blank"><h3>CSS Code<br>Snippets</h3></a>
+                        </workitem>
+                        <workitem id="workitem2">
                             <a class="imageanchor" href="https://mitchh10.github.io/Horiseon-Refactor/" target="_blank"></a>
                             <a class="titleanchor" href="https://mitchh10.github.io/Horiseon-Refactor/" target="_blank"><h3>Horiseon<br>Refactor</h3></a>
                         </workitem>
-                        <workitem id="workitemcomingsoon">
-                            <a class="imageanchor" href="https://www.google.com/" target="_blank"></a>
-                            <a class="titleanchor" href="https://www.google.com/" target="_blank"><h3>Coming<br>Soon</h3></a>
+                        <workitem id="workitem3">
+                            <a class="imageanchor" href="https://mitchh10.github.io/Password-Generator/" target="_blank"></a>
+                            <a class="titleanchor" href="https://mitchh10.github.io/Password-Generator/" target="_blank"><h3>Password<br>Generator</h3></a>
                         </workitem>
-                        <workitem id="workitemcomingsoon">
-                            <a class="imageanchor" href="https://www.google.com/" target="_blank"></a>
-                            <a class="titleanchor" href="https://www.google.com/" target="_blank"><h3>Coming<br>Soon</h3></a>
-                        </workitem>
-                        <workitem id="workitemcomingsoon">
-                            <a class="imageanchor" href="https://www.google.com/" target="_blank"></a>
-                            <a class="titleanchor" href="https://www.google.com/" target="_blank"><h3>Coming<br>Soon</h3></a>
+                        <workitem id="workitem4">
+                            <a class="imageanchor" href="https://mitchh10.github.io/Work-Day-Scheduler/" target="_blank"></a>
+                            <a class="titleanchor" href="https://mitchh10.github.io/Work-Day-Scheduler/" target="_blank"><h3>Work Day<br>Scheduler</h3></a>
                         </workitem>
                 </otherwork>
             </rightcontent>
