--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
             <rightcontent>
                 <!--Handling main showcase work item-->
                 <showcase>
-                        <a class="imageanchor" href="https://rdalby2002.github.io/national-park-locator/" target="_blank"></a>
-                        <a class="titleanchor" href="https://rdalby2002.github.io/national-park-locator/" target="_blank"><h3>National Park<br>Locator</h3></a>
+                        <a class="imageanchor" href="https://petadoption231.herokuapp.com/" target="_blank"></a>
+                        <a class="titleanchor" href="https://petadoption231.herokuapp.com/" target="_blank"><h3>Pawfriends<br>Adoptions</h3></a>
                 </showcase>
                 <!--Handling the other work items-->
                 <otherwork>
                         <workitem id="workitem1">
-                            <a class="imageanchor" href="https://mitchh10.github.io/CSS-Snippet-Cheat-Sheet/" target="_blank"></a>
-                            <a class="titleanchor" href="https://mitchh10.github.io/CSS-Snippet-Cheat-Sheet/" target="_blank"><h3>CSS Code<br>Snippets</h3></a>
+                            <a class="imageanchor" href="https://rdalby2002.github.io/national-park-locator/" target="_blank"></a>
+                            <a class="titleanchor" href="https://rdalby2002.github.io/national-park-locator/" target="_blank"><h3>National Park<br>Locator</h3></a>
                         </workitem>
                         <workitem id="workitem2">
                             <a class="imageanchor" href="https://mitchh10.github.io/Horiseon-Refactor/" target="_blank"></a>
@@ -63,6 +63,14 @@
                         <workitem id="workitem4">
                             <a class="imageanchor" href="https://mitchh10.github.io/Work-Day-Scheduler/" target="_blank"></a>
                             <a class="titleanchor" href="https://mitchh10.github.io/Work-Day-Scheduler/" target="_blank"><h3>Work Day<br>Scheduler</h3></a>
+                        </workitem>
+                        <workitem id="workitem5">
+                            <a class="imageanchor" href="https://mitchh10.github.io/CSS-Snippet-Cheat-Sheet/" target="_blank"></a>
+                            <a class="titleanchor" href="https://mitchh10.github.io/CSS-Snippet-Cheat-Sheet/" target="_blank"><h3>CSS Code<br>Snippets</h3></a>
+                        </workitem>
+                        <workitem id="workitem6">
+                            <a class="imageanchor" href="https://mitchh10.github.io/CSS-Snippet-Cheat-Sheet/" target="_blank"></a>
+                            <a class="titleanchor" href="https://mitchh10.github.io/CSS-Snippet-Cheat-Sheet/" target="_blank"><h3>Coming<br>Soon</h3></a>
                         </workitem>
                 </otherwork>
             </rightcontent>
